--- a/ProjetEvent/View Controllers/Menu/CreditCard/CreditCardTableViewCell.xib
+++ b/ProjetEvent/View Controllers/Menu/CreditCard/CreditCardTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,14 +19,14 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="187.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2sN-Qw-F84">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2sN-Qw-F84">
                         <rect key="frame" x="25" y="11" width="45" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Number Card" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dX-IB-sfx">
-                        <rect key="frame" x="25" y="52" width="103" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number Card" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dX-IB-sfx">
+                        <rect key="frame" x="25" y="52" width="198" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -47,9 +47,9 @@
                 <constraints>
                     <constraint firstItem="0dX-IB-sfx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="25" id="01p-2Z-yfR"/>
                     <constraint firstItem="2sN-Qw-F84" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="5CN-V1-C5M"/>
-                    <constraint firstAttribute="trailing" secondItem="0dX-IB-sfx" secondAttribute="trailing" constant="253" id="6jc-fr-fiQ"/>
+                    <constraint firstAttribute="trailing" secondItem="0dX-IB-sfx" secondAttribute="trailing" constant="97" id="6jc-fr-fiQ"/>
                     <constraint firstItem="JKB-Zo-soz" firstAttribute="leading" secondItem="IP2-vm-8gz" secondAttribute="trailing" constant="103" id="9lT-po-cUF"/>
-                    <constraint firstAttribute="trailing" secondItem="2sN-Qw-F84" secondAttribute="trailing" constant="253" id="9ql-iN-tUy"/>
+                    <constraint firstAttribute="trailing" secondItem="2sN-Qw-F84" secondAttribute="trailing" constant="250" id="9ql-iN-tUy"/>
                     <constraint firstItem="2sN-Qw-F84" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="25" id="H5g-mi-yqd"/>
                     <constraint firstItem="0dX-IB-sfx" firstAttribute="top" secondItem="2sN-Qw-F84" secondAttribute="bottom" constant="20" id="J6v-Cq-CIJ"/>
                     <constraint firstItem="IP2-vm-8gz" firstAttribute="top" secondItem="0dX-IB-sfx" secondAttribute="bottom" constant="20" id="Xpb-rK-z6r"/>
