--- a/ProjetEvent/profile/ProfileTableViewCell.xib
+++ b/ProjetEvent/profile/ProfileTableViewCell.xib
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="264.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="KIu-fz-YZR">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="KIu-fz-YZR">
                         <rect key="frame" x="0.0" y="15" width="95" height="95"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="95" id="aOx-oN-FYV"/>
