--- a/ProjetEvent/profile/ProfileTableViewCell.xib
+++ b/ProjetEvent/profile/ProfileTableViewCell.xib
@@ -20,10 +20,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="KIu-fz-YZR">
-                        <rect key="frame" x="0.0" y="15" width="95" height="95"/>
+                        <rect key="frame" x="0.0" y="27" width="81" height="83"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="95" id="aOx-oN-FYV"/>
-                            <constraint firstAttribute="width" constant="95" id="hUs-SW-Lp5"/>
+                            <constraint firstAttribute="height" constant="83" id="aOx-oN-FYV"/>
+                            <constraint firstAttribute="width" constant="81" id="hUs-SW-Lp5"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iaV-5u-dJg">
@@ -51,7 +51,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XNq-J1-tEs">
-                        <rect key="frame" x="105" y="47" width="110" height="30"/>
+                        <rect key="frame" x="105" y="47.5" width="110" height="30"/>
                         <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
                         <state key="normal" title="Edit my profile">
                             <color key="titleColor" red="1" green="0.02654661375" blue="0.029965965939999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -62,7 +62,7 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="XNq-J1-tEs" firstAttribute="centerY" secondItem="KIu-fz-YZR" secondAttribute="centerY" id="0aT-ft-57t"/>
+                    <constraint firstItem="XNq-J1-tEs" firstAttribute="centerY" secondItem="KIu-fz-YZR" secondAttribute="centerY" constant="-6" id="0aT-ft-57t"/>
                     <constraint firstItem="kuF-Vg-93I" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="5HC-Cn-zUI"/>
                     <constraint firstItem="iaV-5u-dJg" firstAttribute="top" secondItem="KIu-fz-YZR" secondAttribute="bottom" constant="15" id="Qou-UI-7uN"/>
                     <constraint firstItem="5AA-Ta-hSk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="VOl-Gk-biu"/>
@@ -73,7 +73,7 @@
                     <constraint firstItem="LSM-lt-UFx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="g2J-fN-gFa"/>
                     <constraint firstItem="LSM-lt-UFx" firstAttribute="top" secondItem="5AA-Ta-hSk" secondAttribute="bottom" constant="15" id="hsp-SL-tND"/>
                     <constraint firstItem="KIu-fz-YZR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="srF-GJ-Fl7"/>
-                    <constraint firstItem="KIu-fz-YZR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="zNL-Zu-WHP"/>
+                    <constraint firstItem="KIu-fz-YZR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="27" id="zNL-Zu-WHP"/>
                     <constraint firstAttribute="bottom" secondItem="LSM-lt-UFx" secondAttribute="bottom" constant="10.5" id="zaa-Sg-8pT"/>
                 </constraints>
             </tableViewCellContentView>
