--- a/ProjetEvent/Storyboards/Base.lproj/Main.storyboard
+++ b/ProjetEvent/Storyboards/Base.lproj/Main.storyboard
@@ -85,6 +85,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="sVC-9E-miQ"/>
+        <segue reference="jOy-bp-rEG"/>
     </inferredMetricsTieBreakers>
 </document>
